--- a/prueba/prueba.csproj
+++ b/prueba/prueba.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="añadirGasto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="añadirGasto.Designer.cs">
+      <DependentUpon>añadirGasto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
