--- a/prueba/prueba.csproj
+++ b/prueba/prueba.csproj
@@ -101,6 +101,15 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="HistorialDeGastos.resx">
+      <DependentUpon>HistorialDeGastos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IngresoMonto.resx">
+      <DependentUpon>IngresoMonto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuAdministrador.resx">
+      <DependentUpon>MenuAdministrador.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,6 +125,9 @@
     </Compile>
     <EmbeddedResource Include="registro.resx">
       <DependentUpon>registro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ResumenEconomico.resx">
+      <DependentUpon>ResumenEconomico.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
